Fixing repo path

--- a/stemcell_builder/etc/custom_photon_yum.conf
+++ b/stemcell_builder/etc/custom_photon_yum.conf
@@ -1,6 +1,6 @@
 [base]
 name=VMware Photon Linux 1.0(x86_64)
-baseurl=file:///mnt/photon/usr/src/photon/RPMS
+baseurl=file:///mnt/photon/RPMS
 gpgcheck=0
 
 gpgcheck=0
