--- a/stemcell_builder/stages/base_photon_runit/assets/runsvdir-start.service
+++ b/stemcell_builder/stages/base_photon_runit/assets/runsvdir-start.service
@@ -1,12 +1,9 @@
 [Unit]
-Description=runit
-After=network.target
+Description=Runit Process Supervisor
 
 [Service]
-TimeoutStartSec=0
 ExecStart=/usr/sbin/runsvdir-start
 Restart=always
-KillMode=process
 
 [Install]
 WantedBy=multi-user.target
